--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ margin-left: 7.5px;
 .hr{
         margin-top: -10px;
     color : black;;
-    margin-left: 60.5%;
+    /*margin-left: 60.5%;*/
     font-size: 14px;
 /*    padding : px;*/
 }
